added first blog

--- a/mysimplewebsite.html
+++ b/mysimplewebsite.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first web</title>
+    <link rel="stylesheet" href="blogs/mystyle.css">
 </head>
 <body>
-    
+    <h3>wtfs happening huh !?</h3>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos dolorum. Similique cum cupiditate voluptatum, vel illum sed quam assumenda libero architecto rem quis dignissimos voluptas nobis magnam sequi fugit!</p>
+    </div>
 </body>
 </html>
