--- a/mysimplewebsite.html
+++ b/mysimplewebsite.html
@@ -11,5 +11,17 @@
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos dolorum. Similique cum cupiditate voluptatum, vel illum sed quam assumenda libero architecto rem quis dignissimos voluptas nobis magnam sequi fugit!</p>
     </div>
+    <div>
+        <h3>2nd blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos dolorum. Similique cum cupiditate voluptatum, vel illum sed quam assumenda libero architecto rem quis dignissimos voluptas nobis magnam sequi fugit!</p>
+    </div>
+    <div>
+        <h3>you to push sometionf code</h3>
+        <ul>
+            <li>git add</li>
+            <li>git commit -m "comment"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
