--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div>
         <h3>2nd blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos dolorum. Similique cum cupiditate voluptatum, vel illum sed quam assumenda libero architecto rem quis dignissimos voluptas nobis magnam sequi fugit!</p>
+        
     </div>
     <div>
         <h3>you to push sometionf code</h3>
@@ -22,6 +23,10 @@
             <li>git commit -m "comment"</li>
             <li>git push</li>
         </ul>
+    </div>
+    <div>
+        <h3>some butiful day with butiful idiots</h3>
+        <img src="idot.jpg.jpg">
     </div>
 </body>
 </html>
